Update API and ignore local db
